overlays/uksouth-sandbox/binkweb-nginx/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
      proxy_hide_header l5d-remote-ip;
      proxy_hide_header l5d-server-id;
  name: web.sandbox00.uksouth.bink.sh
  namespace: default
spec:
  rules:
  - host: web.sandbox00.uksouth.bink.sh
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: binkweb-nginx
            port: 
              number: 80
      
  tls:
  - hosts:
    - web.sandbox00.uksouth.bink.sh
    secretName: web.sandbox00.uksouth.bink.sh
